--- a/apk82.ipynb
+++ b/apk82.ipynb
@@ -150,7 +150,7 @@
     "\n",
    "2. Allison Park (Hampton Township)",
     "\n",
-   "3. Jefferson Hills (West Jefferson Hills)"
+   "3. Jefferson Hills (West Jefferson Hills)",
    ]
   }
  ],
